syntax = "proto3";

package cache;

option go_package = "api/pb;cache";

service CacheService {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Clear(ClearRequest) returns (ClearResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message SetResponse {
  bool success = 1;
  string message = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  string message = 2;
  bytes value = 3;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message ClearRequest {}

message ClearResponse {
  bool success = 1;
  string message = 2;
}

message StatsRequest {}

message StatsResponse {
  uint64 key_count = 1;
  uint64 memory_usage_bytes = 2;
  string go_version = 3;
  string timestamp = 4;
}

